--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,8 @@ services:
         value: "-XX:+UseContainerSupport -XX:MaxRAMPercentage=75"
       - key: JWT_SECRET
         sync: false
+      - key: JWT_EXPIRATION
+        value: "86400000"
       - key: DATABASE_URL
         fromDatabase:
           name: contraco-db
@@ -26,6 +28,16 @@ services:
         fromDatabase:
           name: contraco-db
           property: password
+      - key: CORS_ALLOWED_ORIGINS
+        value: "*"
+      - key: CORS_ALLOWED_METHODS
+        value: "GET,POST,PUT,DELETE,OPTIONS"
+      - key: CORS_ALLOWED_HEADERS
+        value: "*"
+      - key: MAX_FILE_SIZE
+        value: "10MB"
+      - key: MAX_REQUEST_SIZE
+        value: "10MB"
 
 databases:
   - name: contraco-db
