--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -18,7 +18,7 @@ spring:
       max-request-size: ${MAX_REQUEST_SIZE:10MB}
 
 server:
-  port: ${SERVER_PORT:9090}
+  port: ${PORT:10000}
   error:
     include-message: always
 
