fix: disable spring.jpa.open-in-view to improve performance

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,10 +1,11 @@
 spring:
   datasource:
-    url: ${DATABASE_URL:jdbc:postgresql://dpg-cub3nkl6l47c739ufbp0-a.frankfurt-postgres.render.com:5432/contraco_db}
-    username: ${DATABASE_USER:contraco_db_user}
-    password: ${DATABASE_PASSWORD:W2DFBO0Iy17aK4qLHb5ML2f0GAEweT3O}
+    url: jdbc:postgresql://dpg-cub3nkl6l47c739ufbp0-a.frankfurt-postgres.render.com:5432/contraco_db
+    username: contraco_db_user
+    password: W2DFBO0Iy17aK4qLHb5ML2f0GAEweT3O
     driver-class-name: org.postgresql.Driver
   jpa:
+    open-in-view: false
     hibernate:
       ddl-auto: update
     properties:
