--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://dpg-cub3nkl6l47c739ufbp0-a.frankfurt-postgres.render.com:5432/contraco_db
-    username: contraco_db_user
-    password: W2DFBO0Iy17aK4qLHb5ML2f0GAEweT3O
+    url: jdbc:${DATABASE_URL}
+    username: ${DATABASE_USER}
+    password: ${DATABASE_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     open-in-view: false
@@ -18,7 +18,7 @@ spring:
       max-request-size: ${MAX_REQUEST_SIZE:10MB}
 
 server:
-  port: ${PORT:10000}
+  port: ${PORT:9090}
   error:
     include-message: always
 
