fix: update database configuration with proper environment variables

--- a/render.yaml
+++ b/render.yaml
@@ -16,6 +16,12 @@ services:
         sync: false
       - key: JWT_EXPIRATION
         value: "86400000"
+      - key: SPRING_DATASOURCE_URL
+        value: "postgresql://dpg-cub3nkl6l47c739ufbp0-a.frankfurt-postgres.render.com:5432/contraco_db"
+      - key: SPRING_DATASOURCE_USERNAME
+        value: "contraco_db_user"
+      - key: SPRING_DATASOURCE_PASSWORD
+        value: "W2DFBO0Iy17aK4qLHb5ML2f0GAEweT3O"
       - key: CORS_ALLOWED_ORIGINS
         value: "*"
       - key: CORS_ALLOWED_METHODS
