--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,9 +1,11 @@
 spring:
   datasource:
-    url: jdbc:postgresql://dpg-cub3nkl6l47c739ufbp0-a.frankfurt-postgres.render.com:5432/contraco_db
-    username: contraco_db_user
-    password: W2DFBO0Iy17aK4qLHb5ML2f0GAEweT3O
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 5
   jpa:
     open-in-view: false
     hibernate:
@@ -11,6 +13,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
   servlet:
     multipart:
