--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,6 @@ logging.level.com.example.contracomanager=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 
-# PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/workwave
-spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.datasource.driver-class-name=org.postgresql.Driver
-
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -31,4 +25,4 @@ app.drawings.upload-dir=drawings
 
 # File Storage Configuration
 file.upload-dir=./uploads/drawings
-app.base-url=http://localhost:9090
+app.base-url=${APP_BASE_URL:http://localhost:9090}
