fix: update port configuration to match Render's detected port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Server Configuration
-server.port=9090
+server.port=${PORT:10000}
 
 # Encryption Configuration
 app.encryption.key=${APP_ENCRYPTION_KEY}
@@ -19,4 +19,4 @@ app.drawings.upload-dir=drawings
 
 # File Storage Configuration
 file.upload-dir=./uploads/drawings
-app.base-url=${APP_BASE_URL:http://localhost:9090}
+app.base-url=${APP_BASE_URL:http://localhost:10000}
